# splunk-diag-analyzer

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
src/splunk_diag_analyzer/: __init__.py  __main__.py  tui.py
tests/: test_analyzer.py
